--- a/_posts/2019-03-06-data-summary/data-summary.html
+++ b/_posts/2019-03-06-data-summary/data-summary.html
@@ -44,12 +44,12 @@
   <!--radix_placeholder_rmarkdown_metadata-->
   
   <script type="text/json" id="radix-rmarkdown-metadata">
-  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description","author","date","output"]}},"value":[{"type":"character","attributes":{},"value":["Data Summary"]},{"type":"character","attributes":{},"value":["This is a brief description of my data.\n"]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","url"]}},"value":[{"type":"character","attributes":{},"value":["Lea Frank"]},{"type":"character","attributes":{},"value":["https://github.com/lfrank14"]}]}]},{"type":"character","attributes":{},"value":["03-06-2019"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["distill::distill_article"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["self_contained"]}},"value":[{"type":"logical","attributes":{},"value":[false]}]}]}]}
+  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description","author","date","output","categories"]}},"value":[{"type":"character","attributes":{},"value":["Data Summary"]},{"type":"character","attributes":{},"value":["This is a brief description of my data.\n"]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","url"]}},"value":[{"type":"character","attributes":{},"value":["Lea Frank"]},{"type":"character","attributes":{},"value":["https://github.com/lfrank14"]}]}]},{"type":"character","attributes":{},"value":["03-06-2019"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["distill::distill_article"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["self_contained"]}},"value":[{"type":"logical","attributes":{},"value":[false]}]}]},{"type":"character","attributes":{},"value":["dataviz","class"]}]}
   </script>
   <!--/radix_placeholder_rmarkdown_metadata-->
   
   <script type="text/json" id="radix-resource-manifest">
-  {"type":"character","attributes":{},"value":["data-summary_files/figure-html5/plot1-1.png"]}
+  {"type":"character","attributes":{},"value":["data-summary_files/bowser-1.9.3/bowser.min.js","data-summary_files/distill-2.2.21/template.v2.js","data-summary_files/figure-html5/plot1-1.png","data-summary_files/jquery-1.11.3/jquery.min.js","data-summary_files/webcomponents-2.0.0/webcomponents.js"]}
   </script>
   <!--radix_placeholder_navigation_in_header-->
   <!--/radix_placeholder_navigation_in_header-->
